# agentmine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
agentmine_demo/: demo_agent_logs.jsonl
docs/: README.md
examples/: demo_data.py
integrations/: __init__.py  langchain_callback.py  llamaindex_observer.py
src/: __init__.py  cli.py
src/analysis/: canary.py  diff.py  root_cause.py  trend.py
src/clustering/: clusterer.py  embedder.py  summarizer.py
src/ingestion/: parser.py  schema.py
src/labeling/: auto_labeler.py
src/report/: html_generator.py
src/utils/: llm.py
src/web/: app.py
tests/: test_ingestion.py
