[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmine"
version = "0.1.0"
description = "AI Agent Failure Pattern Miner — Automatically discover systemic failure modes from agent logs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CCCchen040620", email = "2627559658@qq.com"}
]
keywords = [
    "ai-agent", "llm", "agent-debugging", "failure-analysis",
    "langchain", "observability", "agent-monitoring", "clustering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "sentence-transformers>=2.7",
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
]
all = [
    "agentmine[llm,dev]",
]

[project.scripts]
agentmine = "src.cli:main"

[project.urls]
Homepage = "https://github.com/CCCchen040620/agentmine"
Repository = "https://github.com/CCCchen040620/agentmine"
Issues = "https://github.com/CCCchen040620/agentmine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "examples*"]

[tool.setuptools.package-data]
agentmine = ["src/report/templates/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
